# pepperpy

./: .black.toml  .cursorrules  .env.sample  .gitignore  .mypy.ini  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  Makefile  README.md  docker-compose.yml  migration_report.json  noxfile.py  pepperpy.code-workspace  poetry.toml  pyproject.toml  pyrightconfig.json  ruff.toml  test_result.txt
.changeset/: config.json
.github/workflows/: ci.yml  ci_cd.yml  monorepo.yml  publish.yml  release.yml
PepperPy/tools/benchmarks/: base.py  manager.py
demo_output/: demo_results.json
docs/: README.md  index.md  structure.txt
docs/core/: config.md  registry.md  utils.md
docs/guides/: best_practices.md  getting_started.md
docs/modules/ai/: agents.md  overview.md
docs/modules/console/: components.md
docs/modules/ui/: components.md  overview.md
docs/specification/: architecture.md  design_principles.md  project_structure.md
examples/: README.md  advanced_integration_example.py  advanced_llm_example.py  advanced_module_example.py  advanced_team_example.py  advanced_validation_example.py  agent_examples.py  ai_example.py  ai_examples.py  api_example.py  app_example.py  auth_example.py  autogen_examples.py  basic_usage.py  complete_development_example.py  config_example.py  console_advanced.py  console_example.py  console_examples.py  core_module_example.py  data_pipeline_example.py  database_example.py  db_example.py  demo.py  epub_analysis_example.py  epub_examples.py  events_example.py  file_operations_example.py  full_example.py  github_example.py  http_example.py  infrastructure_example.py  integrated_example.py  llm_example.py  llm_metrics_example.py  logging_example.py  messaging_example.py  metrics_example.py  middleware_hooks_example.py  ml_example.py  (+10 more)
examples/ai_examples/: advanced_pipeline.py  advanced_pipelines.py  advanced_processing.py  advanced_streaming.py  advanced_usage.py  basic_usage.py  optimized_generation.py  optimized_inference.py  optimized_llm.py  optimized_usage.py  pipeline_utils.py  pipeline_visualization.py  templates_and_metrics.py
examples/console_examples/: advanced_cli.py  advanced_features.py  advanced_tui.py  advanced_widgets.py  cli_example.py
examples/database_examples/: advanced.py  basic.py  profiling.py  transactions.py
examples/storage_examples/: advanced_features.py  advanced_usage.py
nox-stubs/nox/: __init__.pyi
nox-stubs/pepperpy_core/: module.pyi
pepperpy/: __init__.py  decorators.py  helpers.py
pepperpy/ai/: __init__.py  cache.py  client.py  config.py  exceptions.py  functions.py  metrics.py  module.py  processing.py  roles.py  streaming.py  templates.py  types.py  visualization.py
pepperpy/ai/agents/: __init__.py  analysis.py  architect.py  base.py  development.py  factory.py  interfaces.py  management.py  project_manager.py  qa.py  research.py  researcher.py  review.py  reviewer.py  specialized.py  team.py  team_types.py  types.py
pepperpy/ai/autogen/: __init__.py  types.py
pepperpy/ai/cache/: config.py  exceptions.py  manager.py  vector.py
pepperpy/cache/: __init__.py
pepperpy/codebase/: __init__.py  config.py  engine.py  indexer.py
pepperpy/console/: __init__.py  base.py  cli.py  config.py  console.py  core.py  decorators.py  errors.py  logging.py  module.py  progress.py  templates.py  validation.py
pepperpy/core/: __init__.py  app.py  base.py  builder.py  config.py  context.py  decorators.py  events.py  exceptions.py  extension.py  factory.py  health.py  interfaces.py  logging.py  metrics.py  module.py  plugin.py  plugins.py  resources.py  serialization.py  state.py  tasks.py  types.py  validation.py  validator.py
pepperpy/database/: config.py  constants.py  context.py  decorators.py  enums.py  events.py  hooks.py  interfaces.py  logging.py  metrics.py  migrations.py  models.py  module.py  profiling.py  query.py  results.py  retry.py  sql.py  transaction.py
pepperpy/db/: client.py  config.py  migrations.py
pepperpy/docs/: generator.py
pepperpy/events/: __init__.py
pepperpy/files/: __init__.py  base.py  config.py  formats.py  manager.py  operations.py  types.py
pepperpy/github/: core.py  workflows.py
pepperpy/llm/: stackspot.py
pepperpy/monitoring/: metrics.py
pepperpy/network/: client.py  config.py  exceptions.py
pepperpy/pipelines/: __init__.py  base.py  types.py  validation.py
pepperpy/scheduler/: __init__.py
pepperpy/tasks/: scheduler.py
pepperpy/templates/: scaffold.py
pepperpy/ui/: __init__.py
pypepper/: cache.py
scripts/: build.py  install.sh  lint.py  manage_deps.py  migrate.py  projects.sh  setup_packages.py  test_generator.py  validate_migration.py
tests/: conftest.py  dummy_test.py  test_dummy.py  test_module.py  utils.py
tests/ai/: test_cache.py  test_module.py
tests/core/: test_logging.py
tests/database/: test_module.py
tests/files/: test_file_operations.py  test_files_base.py  test_manager.py
tools/: pyproject.toml  ruff.toml  scripts.py
tools/benchmarks/: base.py  benchmark_console.py  manager.py
tools/ci/: manager.py  noxfile.py  replace_local_dependencies.sh
tools/ci/workflows/: publish.yml
tools/config/: benchmark.toml  common.toml  pre-commit-config.yaml  pyrightconfig.json  tools.toml
tools/dev/: dependencies.py  environment.py  fix_types.py  manage_deps.py  ruff.toml  setup.py  venv.py
tools/docker/: Dockerfile  docker-compose.yml
tools/docs/: generate_api_docs.py  mkdocs.yml
tools/git-hooks/: pre-push
tools/lint/: lint.py  ruff.toml
tools/make/: common.mk  examples.mk
tools/monitoring/: config.yml  prometheus.yml
tools/monitoring/rules/: alerts.yml  recording.yml
tools/release/: package_version.py  version.py
tools/scripts/: build.py  deps.py  dev.py  docs.py  fix_exceptions.py  fix_imports.py  migrate.py  poetry_build.sh  reorganize.py  setup.py  test_generator.py  validate_migration.py  version.py
tools/stubs/nox/: __init__.pyi  sessions.pyi
tools/stubs/rich/: __init__.pyi
tools/templates/: CHANGELOG.md.template
tools/templates/package/: README.md.template
tools/test/: runner.py
(+265 files in other folders)
