[tool.poetry]
name = "pepperpy-tools"
authors = ["Felipe Pimentel <fpimentel88@gmail.com>"]
version = "0.1.0"
description = "Development tools for PepperPy"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
prometheus-client = "^0.19.0"
pydantic = "^2.6.3"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
Pillow = "^10.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
pydub = "^0.25.1"
python-dotenv = "^1.0.1"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.8.2"

# Add local packages as development dependencies
[tool.poetry.group.local.dependencies]
pepperpy-core = { path = "packages/pepperpy-core", develop = true }
pepperpy-console = { path = "packages/pepperpy-console", develop = true }
pepperpy-db = { path = "packages/pepperpy-db", develop = true }
pepperpy-codebase = { path = "packages/pepperpy-codebase", develop = true }
pepperpy-files = { path = "packages/pepperpy-files", develop = true }
pepperpy-ai = { path = "packages/pepperpy-ai", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "packages/pepperpy-core",
    "packages/pepperpy-console",
    "packages/pepperpy-db",
    "packages/pepperpy-codebase",
    "packages/pepperpy-files",
    "packages/pepperpy-ai",
]
testpaths = ["packages/pepperpy-*/tests"]
markers = ["asyncio: mark test as an async test"]
asyncio_mode = "strict"
addopts = "--asyncio-mode=strict --capture=no"
